[project]
name = "fastapi-async-sqlalchemy"
version = "0.1.0"
description = ""
authors = [{ name = "wntrondaway", email = "wntrondaway@tutamail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.115.8,<0.116.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "alembic (>=1.14.1,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.12.1"
ruff = "^0.9.6"
mypy = "^1.15.0"
